--- a/src-astro/src/components/home/MapSection.astro
+++ b/src-astro/src/components/home/MapSection.astro
@@ -1,12 +1,12 @@
 ---
-// Polytech Tours coordinates
+// Faculté des Sciences - Université de Tours
 const venue = {
-  name: 'Polytech Tours',
-  address: '64 Avenue Jean Portalis',
+  name: 'Faculté des Sciences - Université de Tours',
+  address: '31 Avenue Monge',
   city: '37200 Tours',
   coordinates: {
-    lat: 47.3614,
-    lng: 0.6849,
+    lat: 47.357268,
+    lng: 0.702672,
   },
 };
 
